[metadata]
name = presearch 
version = 0.0.1
author = Sam Ezeh
author_email = sam.z.ezeh@gmail.com
description = A tool to syntactically query Python source code
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dignissimus/presearch
project_urls =
    Bug Tracker = https://github.com/dignissimus/presearch/issues
classifiers =
    Programming Language :: Python :: 3
    OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires = 
  termcolor
  colorama

[options.entry_points]
console_scripts =
  presearch = presearch:__main__.main
